# cpp-synchronized

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build  build_dev  configure
examples/: CMakeLists.txt  ex1.cpp
include/synchronized/: synchronized.hpp
src/: CMakeLists.txt  main.cpp  synchronized.cpp
test/: CMakeLists.txt  synchronized_test.cpp
